# django_tutorial

./: .dockerignore  Dockerfile  README.md  db.sqlite3  pyproject.toml
djangotutorial/mysite/: settings.py
docs/: my_commands.md
mysite/: settings.py
polls/: models.py  views.py
polls/templates/polls/: index.html
