[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django_tutorial"
version = "0.1.0"
dependencies = [
  "django",
]
requires-python = ">= 3.12"
authors = [
  {name = "lazy_skunk"}
]
maintainers = [
  {name = "lazy_skunk"}
]
description = "django_tutorial"
readme = "README.md"

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "isort",
  "mypy",
  "django-debug-toolbar",
  "coverage",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

# Flake8 cannot be configured via pyproject.toml